Added car inventory api with custom exception handling.